Fixed post spacing

--- a/css/index.css
+++ b/css/index.css
@@ -435,15 +435,15 @@ body {
 
 .post-container {
     border-radius: 5px;
-    margin: 20px auto 0px auto;
+    margin: 30px auto 0px auto;
     width: 80%;
     background-image: linear-gradient(#31294c, #5756bb, #8182da);
     color: var(--main-color);
+    box-shadow: 0px 3px 6px 0px #31294c;
 }
 
 .post-container:hover {
     cursor: pointer;
-    box-shadow: 0px 3px 6px 0px #31294c;
 }
 
 .post-header {
